--- a/syq/syq/syq.ioc
+++ b/syq/syq/syq.ioc
@@ -261,15 +261,21 @@ SH.S_TIM8_CH3.0=TIM8_CH3,PWM Generation3 CH3
 SH.S_TIM8_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
+TIM1.EncoderMode=TIM_ENCODERMODE_TI12
 TIM1.IC1Filter=15
 TIM1.IC2Filter=15
-TIM1.IPParameters=Period,Prescaler,IC1Filter,IC2Filter
+TIM1.IPParameters=Period,Prescaler,IC1Filter,IC2Filter,EncoderMode
 TIM1.Period=100-1
 TIM1.Prescaler=720-1
 TIM2.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation4 CH4
+TIM2.EncoderMode=TIM_ENCODERMODE_TI12
+TIM2.IPParameters=Prescaler,Period,Channel-PWM Generation4 CH4,EncoderMode
 TIM2.Period=2000-1
 TIM2.Prescaler=720-1
+TIM3.EncoderMode=TIM_ENCODERMODE_TI12
+TIM3.IPParameters=EncoderMode
+TIM4.EncoderMode=TIM_ENCODERMODE_TI12
+TIM4.IPParameters=EncoderMode
 TIM5.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM5.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM5.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Prescaler,Period
