--- a/CLASS_TERM2/CLASS_TERM2.ioc
+++ b/CLASS_TERM2/CLASS_TERM2.ioc
@@ -2,49 +2,25 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=UART5_TX
-Dma.Request1=UART5_RX
-Dma.RequestsNb=2
-Dma.UART5_RX.1.Direction=DMA_PERIPH_TO_MEMORY
-Dma.UART5_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART5_RX.1.Instance=DMA1_Stream0
-Dma.UART5_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART5_RX.1.MemInc=DMA_MINC_ENABLE
-Dma.UART5_RX.1.Mode=DMA_NORMAL
-Dma.UART5_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART5_RX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.UART5_RX.1.Priority=DMA_PRIORITY_LOW
-Dma.UART5_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.UART5_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.UART5_TX.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.UART5_TX.0.Instance=DMA1_Stream7
-Dma.UART5_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.UART5_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.UART5_TX.0.Mode=DMA_NORMAL
-Dma.UART5_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.UART5_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.UART5_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.UART5_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=NVIC
-Mcu.IP10=TIM12
-Mcu.IP11=TIM13
-Mcu.IP12=TIM14
-Mcu.IP13=UART5
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IP4=TIM1
-Mcu.IP5=TIM3
-Mcu.IP6=TIM4
-Mcu.IP7=TIM6
-Mcu.IP8=TIM8
-Mcu.IP9=TIM9
-Mcu.IPNb=14
+Mcu.IP0=NVIC
+Mcu.IP1=RCC
+Mcu.IP10=TIM13
+Mcu.IP11=TIM14
+Mcu.IP12=UART5
+Mcu.IP2=SYS
+Mcu.IP3=TIM1
+Mcu.IP4=TIM3
+Mcu.IP5=TIM4
+Mcu.IP6=TIM6
+Mcu.IP7=TIM8
+Mcu.IP8=TIM9
+Mcu.IP9=TIM12
+Mcu.IPNb=13
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE4
@@ -69,28 +45,28 @@ Mcu.Pin25=PA13
 Mcu.Pin26=PA14
 Mcu.Pin27=PC12
 Mcu.Pin28=PD2
-Mcu.Pin29=PB6
+Mcu.Pin29=PG9
 Mcu.Pin3=PC13-ANTI_TAMP
-Mcu.Pin30=PB7
-Mcu.Pin31=VP_SYS_VS_Systick
-Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM13_VS_ClockSourceINT
-Mcu.Pin34=VP_TIM14_VS_ClockSourceINT
+Mcu.Pin30=PG14
+Mcu.Pin31=PB6
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin34=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM13_VS_ClockSourceINT
+Mcu.Pin36=VP_TIM14_VS_ClockSourceINT
 Mcu.Pin4=PF8
 Mcu.Pin5=PF9
 Mcu.Pin6=PH0-OSC_IN
 Mcu.Pin7=PH1-OSC_OUT
 Mcu.Pin8=PA6
 Mcu.Pin9=PA7
-Mcu.PinsNb=35
+Mcu.PinsNb=37
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
 MxCube.Version=6.14.0
 MxDb.Version=DB.6.0.140
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Stream7_IRQn=true\:1\:0\:true\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -101,7 +77,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
-NVIC.UART5_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -182,6 +157,10 @@ PF8.Locked=true
 PF8.Signal=S_TIM13_CH1
 PF9.Locked=true
 PF9.Signal=S_TIM14_CH1
+PG14.Locked=true
+PG14.Signal=GPIO_Output
+PG9.Locked=true
+PG9.Signal=GPIO_Output
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -218,7 +197,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_TIM9_Init-TIM9-false-HAL-true,5-MX_TIM12_Init-TIM12-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true,9-MX_TIM8_Init-TIM8-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM13_Init-TIM13-false-HAL-true,12-MX_TIM14_Init-TIM14-false-HAL-true,13-MX_UART5_Init-UART5-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_TIM9_Init-TIM9-false-HAL-true,4-MX_TIM12_Init-TIM12-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM13_Init-TIM13-false-HAL-true,11-MX_TIM14_Init-TIM14-false-HAL-true,12-MX_UART5_Init-UART5-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
